--- a/css/main.css
+++ b/css/main.css
@@ -3,22 +3,32 @@ main-element {
 	background-color: var(--main);
 	margin: 1em;
 	margin-inline: 15%;
-	padding: 0.5em;
+	padding: 1em;
 
 	border: 2px solid var(--accent);
 	border-radius: 0.5em;
 }
 
-.button {
+main-element:hover {
+	border: 2px solid var(--accent3);
+    
+    transform: scale(1.000);
+}
+
+.button, button {
 	background-color: var(--main2);
 	border: 1px solid var(--accent);
 	border-radius: 0.5em;
 	padding: 0.5em;
 
-	text-decoration: none;
+	text-decoration: none;	
 }
 
-nav div {
+.button:hover, button:hover{
+	background-color: var(--accent3);
+}
+
+nav div { /* Button Align */
 	padding: 1em;
 } 
 
